--- a/ianseo/ianseo.conf
+++ b/ianseo/ianseo.conf
@@ -1,1 +1,7 @@
 Alias /ianseo/ /var/www/html/
+
+<Directory /var/www/html/>
+    Options Indexes FollowSymLinks
+    DirectoryIndex index.php
+    Require all granted
+</Directory>
