--- a/ianseo/ianseo.yml
+++ b/ianseo/ianseo.yml
@@ -107,9 +107,8 @@
       name: ianseo
       state: import
       target: /var/www/html/Install/install.sql
-      check_implicit_admin: true
       login_user: root
-      login_password: "@lliance21"
+      login_password: @lliance21
 
   - name: "Create Ianseo MySQL User"
     community.mysql.mysql_user:
