--- a/ianseo/ianseo.yml
+++ b/ianseo/ianseo.yml
@@ -107,8 +107,8 @@
       name: ianseo
       state: import
       target: /var/www/html/Install/install.sql
-      login_user: root
-      login_password: "@lliance21"
+      login_user: ianseo
+      login_password: "ianseo"
 
   - name: "Create Ianseo MySQL User"
     community.mysql.mysql_user:
